--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
       <li>
         <a href="/characters">Characters</a>
       </li>
+      
       <% if session.fetch(:user_id) == nil %>
       <li>
         <a href="/user_sign_up">Sign up</a>
@@ -36,6 +37,9 @@
         <a href="/user_sign_in">Sign in</a>
       </li>
       <% else %>
+      <li>
+        <a href="/bookmarks">My Bookmarks</a>
+      </li>
       <li>
         <a href="/user_sign_out">Sign out</a>
       </li>
